[package]
name = "jinko"
version = "0.1.1"
authors = ["CohenArthur <arthur.cohen@epita.fr>", "Skallwar <esteban.blanc@epita.fr>"]
edition = "2018"
description = "jinko is a safe, small and fast programming language with Rust interoperability"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/cohenarthur/jinko"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0"
nom = { version = "5.1", default-features = false }
linefeed = "0.6"
downcast-rs = "1.2"
