[package]
name = "jinko"
version = "0.3.0-jinx1"
authors = ["CohenArthur <arthur.cohen@epita.fr>", "Skallwar <esteban.blanc@epita.fr>", "SanderJSA <sander.julien-saint-amand@epita.fr"]
edition = "2021"
description = "jinko is a safe, small and fast programming language with Rust interoperability"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/cohenarthur/jinko"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0"
nom = "7.0"
linefeed = "0.6"
downcast-rs = "1.2"
anyhow = "1.0"
libloading = "0.7"

[dev-dependencies]
libc = "0.2"

[[bin]]
name = "jinko"
path = "interpreter/jinko.rs"
