[package]
name = "jinko"
version = "0.3.0-jinx7"
authors = ["CohenArthur <cohenarthur.dev@gmail.com>", "Skallwar <esteban.blanc@epita.fr>", "SanderJSA <sander.julien-saint-amand@epita.fr", "TanguySegarra <tanguy.segarra@epita.fr>"]
edition = "2021"
description = "jinko is a safe, small and fast programming language with Rust interoperability"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/cohenarthur/jinko"

[workspace]

members = [
  "error",
  "location",
  "symbol",
  "ast",
  "fir",
  "flatten",
  "name_resolve",
  "include_code",
  "loop_desugar",
  "xparser",
  "ast-sanitizer",
  "debug-fir",
  "typecheck",
  "recursive_typecheck",
  "fire",
]

[dependencies]
ast = { path = "ast" }
ast-sanitizer = { path = "ast-sanitizer" }
fir = { path = "fir" }
fire = { path = "fire" }
debug-fir = { path = "debug-fir" }
flatten = { path = "flatten" }
name_resolve = { path = "name_resolve" }
symbol = { path = "symbol" }
error = { path = "error" }
location = { path = "location" }
include_code = { path = "include_code" }
loop_desugar = { path = "loop_desugar" }
xparser = { path = "xparser" }
typecheck = { path = "typecheck" }
recursive_typecheck = { path = "recursive_typecheck" }
structopt = "0.3"
colored = "2.0"
nom = "7.0"
nom_locate = "4.0"
linefeed = { version = "0.6", optional = true }
downcast-rs = "1.2"
anyhow = "1.0"
libffi = { version = "2.0.0", optional = true }
libloading = { version = "0.7", optional = true }
lazy_static = "1.4"

[features]
default = ["repl", "ffi", "std"]
repl = ["linefeed"]
ffi = ["libloading", "libffi"]
std = []

[dev-dependencies]
libc = "0.2"

[[bin]]
name = "jinko"
path = "interpreter/jinko.rs"
required-features = ["std"]

[profile.release]
lto = true
