[package]
name = "builtins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
symbol = { path = "../symbol" }
location = { path = "../location" }
error = { path = "../error" }
