[package]
name = "fire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error = { path = "../error" }
symbol = { path = "../symbol" }
location = { path = "../location" }
fir = { path = "../fir" }
ast = { path = "../ast" }
flatten = { path = "../flatten" }
