[package]
name = "fire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
fir = { path = "../fir" }
error = { path = "../error" }
symbol = { path = "../symbol" }
flatten = { path = "../flatten" }
