[package]
name = "fire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
fir = { path = "../fir" }
flatten = { path = "../flatten" }

[dev-dependencies]
name_resolve = { path = "../name_resolve" }
typecheck = { path = "../typecheck" }
xparser = { path = "../xparser" }
location = { path = "../location" }
