[package]
name = "name_resolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fir = { path = "../fir" }
symbol = { path = "../symbol" }
flatten = { path = "../flatten" }
error = { path = "../error" }
location = { path = "../location" }
distance = "0.4"

[dev-dependencies]
xparser = { path = "../xparser" }
