[package]
name = "xparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
location = { path = "../location" }
symbol = { path = "../symbol" }
nom = "7.0"
nom_locate = "4.0"
